<resources>
    <string name="app_name">MyLuaApp</string>
    <string name="toast_exit_app">再按一次退出当前界面</string>
    <string name="welcome_description">MyLuaApp by dingyi</string>
    <string name="main_menu_add">创建项目</string>
    <string name="main_project_list_config_error">发现有项目文件配置错误，请尝试手动修复</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="imports">导入</string>
    <string name="new_project_base_info">基本信息</string>
    <string name="new_project_app_name_hint">应用名</string>
    <string name="new_project_title">创建项目</string>
    <string name="new_project_app_package_hint">包名</string>
    <string name="new_project_base_template_title">项目模板</string>
    <string name="new_project_app_name_error">项目已存在</string>
    <string name="new_project_app_name_error_empty">应用名不得为空</string>
    <string name="new_project_app_package_error_empty">包名不得为空</string>
    <string name="new_project_base_other_title">其他</string>
    <string name="new_project_use_androidx">启用AndroidX</string>
    <string name="new_project_app_package_text">com.MyLuaApp.application</string>
    <string name="import_dialog_plugin">导入</string>
    <string name="permission_request_sdcard">MyLuaApp需要存储权限，用于打开，编辑项目</string>
    <string name="permission_request_sdcard_denied">存储权限是必须权限，否则将无法使用</string>
    <string name="import_plugin_name">插件名称</string>
    <string name="import_plugin_id">插件id</string>
    <string name="import_plugin_version">插件版本号</string>
    <string name="import_plugin_version_code">插件版本号代码</string>
    <string name="import_success_toast">导入成功</string>
    <string name="import_plugin_author">插件作者</string>
    <string name="import_plugin_description">插件描述</string>
    <string name="import_plugin_class_name">插件运行主类</string>
    <string name="import_plugin_title">导入插件:&#160;</string>
    <string name="editor_menu_run">运行</string>
    <string name="editor_menu_undo">撤销</string>
    <string name="editor_menu_file_history">查看编辑历史</string>
    <string name="editor_action_save">保存</string>
    <string name="editor_menu_redo">重做</string>
    <string name="editor_menu_project">项目</string>
    <string name="editor_menu_code">代码</string>
    <string name="editor_menu_find">查找</string>
    <string name="editor_menu_format">格式化</string>
    <string name="editor_menu_goto">转到</string>
    <string name="editor_menu_error">查错</string>
    <string name="editor_menu_import_fix">分析导入</string>
    <string name="editor_menu_plugin">插件</string>
    <string name="editor_menu_more">更多</string>
    <string name="editor_menu_tab_save">保存</string>
    <string name="editor_menu_save_success">保存成功</string>
    <string name="editor_menu_tab_close">关闭</string>
    <string name="editor_menu_tab_close_other">关闭其他</string>
    <string name="editor_navigation_title">代码导航</string>
    <string name="editor_toast_no_open_file">当前无打开文件</string>
    <string name="settings_editor_category">编辑器</string>
    <string name="settings_editor_title">编辑器</string>
    <string name="settings_build_category">构建 &amp; 运行</string>
    <string name="settings_application_category">应用</string>
    <string name="settings_plugin_category">插件</string>
    <string name="settings_about_category">关于</string>
    <string name="settings_main_title">设置</string>
    <string name="settings_application_summary">配置全局应用设置</string>
    <string name="settings_editor_summary">配置编辑器设置</string>
    <string name="settings_build_summary">配置构建和运行设置</string>
    <string name="settings_plugin_summary">配置插件设置</string>
    <string name="about_slogan_title">关于</string>
    <string name="settings_application_language_title">语言</string>
    <string name="settings_application_language_summary">设置程序界面的语言</string>
    <string name="settings_editor_function_category">功能</string>
    <string name="settings_editor_appearance_category">外观</string>
    <string name="settings_editor_language_category">语言特性</string>
    <string name="settings_editor_language_summary">设置不同语言在编辑器下的特性</string>
    <string name="settings_editor_language_restart_toast">重启后生效</string>
    <string name="settings_editor_other_category">其他</string>
    <string name="settings_editor_font_category">字体</string>
    <string name="settings_editor_font_summary">设置编辑器的字体</string>
    <string name="settings_editor_symbol_bar_category">符号栏</string>
    <string name="settings_editor_font_toast_successful">选择字体成功</string>
    <string name="settings_editor_font_toast_fail">选择字体失败</string>
    <string name="settings_editor_magnifier_summary">在拖动选择文本时放大临近内容</string>
    <string name="settings_editor_magnifier_category">放大镜</string>
    <string name="editor_menu_file_list_toolbar_new_directory">新建文件夹</string>
    <string name="editor_menu_file_list_toolbar_new_file">新建文件</string>
    <string name="editor_menu_file_list_long_click_rename">重命名</string>
    <string name="editor_menu_file_list_long_click_delete">删除</string>
    <string name="editor_menu_file_list_long_click_show_local_history">查看编辑历史</string>
    <string name="editor_dialog_choose_file_template_title">新建文件</string>
    <string name="editor_dialog_create_file_title">新建 </string>
    <string name="editor_dialog_delete_title">删除</string>
    <string name="editor_dialog_delete_message">是否确认删除？删除后不可恢复</string>
    <string name="editor_dialog_create_directory_title">新建文件夹</string>
    <string name="editor_dialog_rename_title">重命名</string>
    <string name="main_project_list_long_click_delete_project">删除项目</string>
    <string name="main_project_list_long_click_backup_project">备份项目</string>
    <string name="main_dialog_delete_project_title">删除项目</string>
    <string name="main_dialog_delete_project_message">是否确认删除当前项目？删除后不可恢复！</string>
    <string name="editor_build_log_title">打包日志</string>
    <string name="about_description">小而轻快,用Lua或者Java混合开发android软件</string>
    <string name="about_version">版本号</string>
    <string name="about_contact_me">联系我们</string>
    <string name="about_open_source_license">开放源代码许可</string>
    <string-array name="main_poetry_array">
        <item>夜雨清无寐，秋虫响易哀。</item>
        <item>夜雨潇潇至，天寒拥敝裘。</item>
        <item>夜半山雨来，梦觉还复息。</item>
        <item>夜帐不知雨，晓街初见泥。</item>
        <item>隔窗知夜雨，芭蕉先有声。</item>
        <item>银烛秋光冷画屏，轻罗小扇扑流萤。</item>
        <item>君问归期未有期，巴山夜雨涨秋池。</item>
        <item>世事漫随流水，算来一梦浮生。</item>
        <item>寒雨连江夜入吴，平明送客楚山孤。</item>
        <item>微雨眼明处，春信著南枝。</item>
        <item>云深不见山，雨密还遮树。</item>
        <item>忽讶微云得急雨，纵妨明月有清风。</item>
        <item>桃李春风一杯酒，江湖夜雨十年灯。</item>
        <item>一夜雨声凉到梦，万荷叶上送秋来。</item>
        <item>楚江微雨里，建业暮钟时。</item>
        <item>垂死病中惊坐起，谈笑风生又一年。</item>
        <item>连宵不寝听微雨，错喜檐花滴数行。</item>
        <item>日暮微雨中，州城带秋色。</item>
        <item>雨打江南树，一夜花开无数。</item>
        <item>与君同船渡，达岸各自归。</item>
        <item>相寻梦里路，飞雨落花中。</item>
        <item>不知何处雨，此间已觉凉。</item>
        <item>时有落花至，远随流水香。</item>
        <item>不摇香已乱，无风花自飞。</item>
        <item>不识朝云行雨处，空随春梦到人间。</item>
        <item>疏影横斜水清浅，暗香浮动月黄昏。</item>
        <item>江城如画里，山晚望晴空。</item>
        <item>落花人独立，微雨燕双飞。</item>
        <item>梦长梦短俱是梦，年来年去是何年。</item>
        <item>可怜日暮嫣香落，嫁与春风不用媒。</item>
        <item>最是人间留不住，朱颜辞镜花辞树。</item>
        <item>壮年听雨客舟中，江阔云低，断雁叫西风。</item>
        <item>十年旧约江南梦，独听寒山半夜钟。</item>
        <item>日暮酒醒人已远，满天风雨下西楼。</item>
        <item>浮天水送无穷树，带雨云埋一半山。</item>
        <item>晚泊孤舟古祠下，满川风雨看潮生。</item>
        <item>海棠未雨，梨花先雪，一半春休。</item>
        <item>落尽梨花春又了。满地残阳，翠色和烟老。</item>
        <item>飞絮飞花何处是，层冰积雪摧残，疏疏一树五更寒。</item>
    </string-array>
    <string name="about_development_title">开发相关</string>
    <string name="about_open_source">开源地址</string>
    <string name="editor_menu_tab_close_all">关闭所有</string>
</resources>