<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_editor_category">
    <PreferenceCategory android:title="@string/settings_editor_function_category">
        <EditTextPreference
            android:key="symbol_bar"
            android:title="@string/settings_editor_symbol_bar_category" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_editor_appearance_category">
        <Preference
            android:key="font_set"
            android:icon="@drawable/ic_twotone_translate_24"
            android:summary="@string/settings_editor_font_summary"
            android:title="@string/settings_editor_font_category" />
        <SwitchPreference
            android:icon="@drawable/ic_twotone_search_24"
            android:key="magnifier_set"
            android:defaultValue="true"
            android:summary="@string/settings_editor_magnifier_summary"
            android:title="@string/settings_editor_magnifier_category" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_editor_other_category">
        <Preference
            android:summary="@string/settings_editor_language_summary"
            android:title="@string/settings_editor_language_category" />
    </PreferenceCategory>
</PreferenceScreen>