<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/editor_action_run"
        android:icon="@drawable/ic_twotone_play_arrow_24"
        android:title="@string/editor_menu_run"
        app:showAsAction="always" />
    <item
        android:id="@+id/editor_action_undo"
        android:icon="@drawable/ic_twotone_undo_24"
        android:title="@string/editor_menu_undo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/editor_action_save"
        app:showAsAction="withText|ifRoom"

        android:title="@string/editor_action_save" />
    <item
        android:id="@+id/editor_action_redo"
        app:showAsAction="withText|ifRoom"

        android:title="@string/editor_menu_redo" />
    <item
        android:id="@+id/editor_action_project"
        app:showAsAction="withText|ifRoom"

        android:title="@string/editor_menu_project">
        <menu>

        </menu>
    </item>
    <item
        android:id="@+id/code"
        app:showAsAction="withText|ifRoom"

        android:title="@string/editor_menu_code">
        <menu>
            <item
                android:id="@+id/editor_action_code_format"
                android:title="@string/editor_menu_format" />
        </menu>
    </item>
    <item
        android:id="@+id/editor_action_plugin"
        app:showAsAction="withText|ifRoom"

        android:title="@string/editor_menu_plugin">
        <menu>

        </menu>
    </item>
    <item
        android:id="@+id/editor_action_more"
        app:showAsAction="withText|ifRoom"

        android:title="@string/editor_menu_more">
        <menu>

        </menu>
    </item>
</menu>