<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/main_action_menu_new_project"
        android:icon="@drawable/ic_twotone_add_24"
        android:title="@string/main_menu_add"
        app:showAsAction="always" />

    <item
        android:icon="@drawable/ic_twotone_move_to_inbox_24"
        android:title="@string/imports"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_action_menu_settings"
        android:icon="@drawable/ic_twotone_settings_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@drawable/ic_twotone_help_24"
        android:title="@string/help"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_action_menu_about"
        android:icon="@drawable/ic_twotone_info_24"
        android:title="@string/about"
        app:showAsAction="ifRoom" />
</menu>