<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="match_parent">


    <include
        android:id="@+id/toolbar_include"
        layout="@layout/layout_include_toolbar" />

    <ProgressBar
        android:layout_width="0dp"
        android:id="@+id/progress"
        android:indeterminate="true"
        android:elevation="4dp"
        android:visibility="gone"
        style="@android:style/Widget.Material.ProgressBar.Horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_include"
        android:layout_height="16dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/base_info_title"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/new_project_base_info"
        android:textColor="?colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/app_name_parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/base_info_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/app_name"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_project_app_name_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/app_package_name_parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

        android:layout_marginRight="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/app_package_name"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:text="@string/new_project_app_package_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_project_app_package_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/base_template_title"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/new_project_base_template_title"
        android:textColor="?colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_package_name_parent" />

    <com.google.android.material.chip.ChipGroup
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:singleSelection="true"
        android:id="@+id/chip_group"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/base_template_title">



    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/base_other_title"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/new_project_base_other_title"
        android:textColor="?colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="left|center"

        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/base_other_title"
        android:layout_height="48dp">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_marginLeft="16dp"
            android:text="@string/new_project_use_androidx"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"

            android:enabled="false"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>