<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="0dp"
                app:strokeColor="?theme_stroke_color"
                app:strokeWidth="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/logo"
                        style="@style/ShapeAppearanceOverlay.Corner.Round"
                        android:layout_width="56dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:src="@mipmap/ic_launcher_round"
                        app:layout_constraintBottom_toBottomOf="@id/about_description"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/app_name"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/app_name"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="16dp"

                        android:text="@string/app_name"
                        android:textColor="?theme_textColor"
                        android:textSize="19sp"

                        app:layout_constraintBottom_toTopOf="@id/about_description"
                        app:layout_constraintLeft_toRightOf="@id/logo"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/logo" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/about_description"
                        android:layout_width="0dp"
                        android:layout_height="0dp"

                        android:layout_marginEnd="24dp"
                        android:text="@string/about_description"
                        app:layout_constraintBottom_toTopOf="@id/version"
                        app:layout_constraintLeft_toLeftOf="@id/app_name"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/app_name" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/version"
                        android:layout_width="0dp"
                        android:clickable="true"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="?selectableItemBackground"
                        android:orientation="horizontal"
                        android:paddingStart="?android:listPreferredItemPaddingStart"
                        android:paddingTop="8dp"
                        android:paddingEnd="?android:listPreferredItemPaddingEnd"
                        android:paddingBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@id/contact"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/about_description">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_outline_info_24"
                            app:tint="?theme_hintTextColor" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text="@string/about_version"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                android:ellipsize="end"
                                android:id="@+id/version_code"
                                android:maxLines="1"
                                android:text="1.0"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
                        </LinearLayout>
                    </androidx.appcompat.widget.LinearLayoutCompat>


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/contact"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:orientation="horizontal"
                        android:paddingStart="?android:listPreferredItemPaddingStart"
                        android:paddingTop="8dp"
                        android:paddingEnd="?android:listPreferredItemPaddingEnd"
                        android:paddingBottom="8dp"
                        android:layout_marginBottom="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/version">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_twotone_email_24"
                            app:tint="?theme_hintTextColor" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text="@string/about_contact_me"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                        </LinearLayout>
                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="0dp"
                app:strokeColor="?theme_stroke_color"
                app:strokeWidth="1dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingStart="?android:listPreferredItemPaddingStart"
                        android:paddingTop="6dp"
                        android:paddingEnd="?android:listPreferredItemPaddingEnd"
                        android:paddingBottom="6dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_development_title"
                            android:textColor="?theme_textColor" />
                    </LinearLayout>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/open_source"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingStart="?android:listPreferredItemPaddingStart"
                        android:paddingTop="8dp"
                        android:paddingEnd="?android:listPreferredItemPaddingEnd"
                        android:paddingBottom="8dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_github"
                            app:tint="?theme_hintTextColor" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text="@string/about_open_source"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
                        </LinearLayout>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/open_source_license"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingStart="?android:listPreferredItemPaddingStart"
                        android:paddingTop="8dp"
                        android:paddingEnd="?android:listPreferredItemPaddingEnd"
                        android:paddingBottom="8dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_twotone_code_24"
                            app:tint="?theme_hintTextColor" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text="@string/about_open_source_license"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
                        </LinearLayout>
                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.card.MaterialCardView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>